remove trim for finding good matlab script to output nice figures.

--- a/agufall12.tex
+++ b/agufall12.tex
@@ -193,13 +193,13 @@ Array-based GSDF method measure the phase difference between nearby stations by 
   \headerbox{Results}{name=results,column=2,span=2,row=0}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \begin{tabular}{@{}c@{ }c@{ }c@{ }c@{}@{ }@{ }c@{ }c@{ }c@{ }c@{ }}
-    \includegraphics[width=0.20\linewidth,trim=100 20 100 0,clip]{pics/noise/phasev_04}&
-    \includegraphics[width=0.20\linewidth,trim=100 20 100 0,clip]{pics/noise/phasev_07}&
-    \includegraphics[width=0.20\linewidth,trim=100 20 100 0,clip]{pics/noise/phasev_10}\\[-0.8em]
+    \includegraphics[width=0.20\linewidth]{pics/noise/phasev_04}&
+    \includegraphics[width=0.20\linewidth]{pics/noise/phasev_07}&
+    \includegraphics[width=0.20\linewidth]{pics/noise/phasev_10}\\[-0.8em]
     \smaller a) Target & \smaller b) Fit & \smaller c) Normalized\\[0.8em]
-    \includegraphics[width=0.20\linewidth,trim=100 20 100 0,clip]{pics/noise/phasev_04}&
-    \includegraphics[width=0.20\linewidth,trim=100 20 100 0,clip]{pics/noise/phasev_07}&
-    \includegraphics[width=0.20\linewidth,trim=100 20 100 0,clip]{pics/noise/phasev_10}\\[-0.8em]
+    \includegraphics[width=0.20\linewidth]{pics/noise/phasev_04}&
+    \includegraphics[width=0.20\linewidth]{pics/noise/phasev_07}&
+    \includegraphics[width=0.20\linewidth]{pics/noise/phasev_10}\\[-0.8em]
     \smaller a) Target & \smaller b) Fit & \smaller c) Normalized
   \end{tabular}
   }%
